# ITareaCorta2018

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  resumen.txt  textos.txt
Lector/: Lector.cpp  Lector.h
